[tool.poetry]
name = "plunkylib"
version = "0.1.6"
description = "plunkylib - Python LLM User Navigation Kit via YAML"
authors = ["Mattie Casper"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datafiles = "^2.0"
python-dotenv = "^1.0.0"
loguru = "^0.6.0"
nest-asyncio = "^1.5.6"
openai = "^0.27.2"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
plunky = "plunkylib.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

